--- a/Bebas/app/src/main/res/layout/activity_main.xml
+++ b/Bebas/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,7 @@
                 android:background="@drawable/bg_login_bttn"
                 android:fontFamily="@font/roboto_medium"
                 android:text="Masuk"
+                android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.533"
@@ -157,7 +158,9 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_fab_bg"
+        android:backgroundTint="@color/purple_500"
+        app:backgroundTint="@color/white"
+        app:borderWidth="2dp"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
