--- a/Bebas/app/src/main/res/layout/activity_main.xml
+++ b/Bebas/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -69,7 +70,7 @@
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="305dp"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/custom_input_bg"
                     android:ems="10"
                     android:hint="Username"
@@ -92,26 +93,28 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColorHint="@color/hint"
-                app:passwordToggleTint="#2F82FF"
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
+                app:errorEnabled="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/usernameTextInput"
-                app:layout_constraintVertical_bias="0.147"
-                app:passwordToggleEnabled="true">
+                app:layout_constraintVertical_bias="0.219"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="#2F82FF">
 
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="305dp"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/custom_input_bg"
                     android:ems="10"
                     android:hint="Password"
                     android:includeFontPadding="true"
-                    android:paddingLeft="10dp"
                     android:inputType="textPassword"
+                    android:paddingLeft="10dp"
                     android:textColorHint="#97A5C9"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -123,10 +126,11 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnLogin"
                 android:layout_width="305dp"
                 android:layout_height="48dp"
                 android:background="@drawable/bg_login_bttn"
+                android:enabled="false"
                 android:fontFamily="@font/roboto_medium"
                 android:text="Masuk"
                 android:textAllCaps="false"
@@ -135,7 +139,88 @@
                 app:layout_constraintHorizontal_bias="0.533"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
-                app:layout_constraintVertical_bias="0.43" />
+                app:layout_constraintVertical_bias="0.19" />
+
+            <FrameLayout
+                android:id="@+id/userCard"
+                android:layout_width="305dp"
+                android:layout_height="68dp"
+                android:background="@drawable/bg_profile_img_card_2"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.13">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/rekNum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="75dp"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="rekNum"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/nameOfuser"
+                        app:layout_constraintVertical_bias="0.157" />
+
+                    <TextView
+                        android:id="@+id/nameOfuser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="75dp"
+                        android:fontFamily="@font/roboto"
+                        android:text="nameOfUser"
+                        android:textColor="#F8F8F8"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.2" />
+
+                    <FrameLayout
+                        android:id="@+id/profileimageCard"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:background="@drawable/bg_profile_image_card"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.062"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            app:srcCompat="@drawable/img_profile" />
+                    </FrameLayout>
+
+                    <ImageButton
+                        android:id="@+id/closeCardBtn"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:background="@drawable/bg_floating"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.943"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_baseline_close_24" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </FrameLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
