--- a/Bebas/app/src/main/res/layout/activity_main.xml
+++ b/Bebas/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".features.MainActivity">
 
     <TextView
         android:id="@+id/logIn"
@@ -40,7 +40,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="335dp"
-        android:layout_height="276dp"
+        android:layout_height="290dp"
         android:background="@drawable/bg_cardview"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,8 +75,8 @@
                     android:ems="10"
                     android:hint="Username"
                     android:includeFontPadding="true"
-                    android:paddingLeft="10dp"
                     android:inputType="textPersonName"
+                    android:paddingLeft="10dp"
                     android:textColorHint="#97A5C9"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -244,12 +244,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_500"
+        android:clickable="true"
         app:backgroundTint="@color/white"
         app:borderWidth="2dp"
-        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:srcCompat="@drawable/facerec"
         app:strokeColor="#FFFFFF" />
 
@@ -282,7 +284,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotPass"
-        app:layout_constraintVertical_bias="0.549">
+        app:layout_constraintVertical_bias="0.417">
 
         <ImageView
             android:id="@+id/imageView"
@@ -317,5 +319,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
