--- a/BrokenApp/app/src/main/res/layout/activity_main.xml
+++ b/BrokenApp/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".features.MainActivity">
 
     <TextView
         android:id="@+id/logIn"
@@ -141,11 +141,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
                 app:layout_constraintVertical_bias="0.19" />
 
-            <com.example.brokenapp.UserCardView
+            <com.example.brokenapp.features.UserCardView
                 android:id="@+id/userCard"
                 android:layout_width="305dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_profile_img_card_2"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -248,5 +249,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
