--- a/BrokenApp/app/src/main/res/layout/activity_notification.xml
+++ b/BrokenApp/app/src/main/res/layout/activity_notification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Notification">
+    tools:context=".features.notification.Notification">
 
     <TextView
         android:id="@+id/textView9"
